# home-credit-default-risk-project

./: .env.example  .gitignore  Makefile  PLAN_v2.md  README.md  RUNBOOK.md  pyproject.toml  run.ps1
artifacts/best_params/: lgbm.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
notebooks/: 01_eda_application.ipynb  02_eda_bureau.ipynb  03_eda_previous.ipynb  04_eda_target_leakage_check.ipynb
src/: __init__.py  auxiliary.py  config.py  cv.py  data.py  dummy_submission.py  ensemble.py  stack.py  submit.py  train.py  tune.py  utils.py
src/features/: __init__.py  application.py  assemble.py  base.py  bureau.py  credit_card.py  installments.py  pos_cash.py  previous.py
src/models/: __init__.py  base.py  catboost.py  lgbm.py  nn.py  xgb.py
submissions/: log.csv
tests/: __init__.py  test_config.py  test_cv.py  test_utils.py
